added add-task popup

--- a/libs/ui/task/task.component.html
+++ b/libs/ui/task/task.component.html
@@ -1,11 +1,12 @@
 <div class="lecture">
     <div class="header-container">
         <div class="header-row text-row">
-            <!-- <pt-drop-down style="margin-right: 10px;" [chips]="lecture.btns" svg="more-vert"></pt-drop-down> -->
+            <!-- <pt-drop-down style="margin-right: 10px;" [chips]="task.btns"></pt-drop-down> -->
+            <pt-drop-down style="margin-right: 10px;"></pt-drop-down>
             <!-- <div>{{ lecture.lecture.course.slug }}</div> -->
             <div class="lecture-status">
-                <!-- <pt-status [status]="lecture.status"></pt-status> -->
-                <pt-status [status]="task.status"></pt-status>
+                <!-- <pt-status [status]="task.status"></pt-status> -->
+                <!-- <pt-status [status]="task.status"></pt-status> -->
             </div>
         </div>
     </div>
