--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-tasks></app-tasks>
+<div class="background">
+    <div class="body-container">
+        <app-tasks></app-tasks>
+    </div>
+</div>
