--- a/libs/ui/date/date.component.css
+++ b/libs/ui/date/date.component.css
@@ -1,7 +1,3 @@
-.body-container {
-  display: flex;
-}
-
 .input {
   width: 100%;
   border: 0;
@@ -12,6 +8,7 @@
 }
 
 .input-container {
+  width: 50%;
   outline: 0;
   box-shadow: none;
   color: rgba(var(--base-accent-color));
