--- a/libs/ui/theme/main.scss
+++ b/libs/ui/theme/main.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Rubik;
-  src: url(../assets/fonts/Rubik-Light.ttf) format('truetype');
+  src: url(../assets/fonts/Rubik-Light.ttf) format("truetype");
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: Rubik;
-  src: url(../assets/fonts/Rubik-Regular.ttf) format('truetype');
+  src: url(../assets/fonts/Rubik-Regular.ttf) format("truetype");
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: Rubik;
-  src: url(../assets/fonts/Rubik-Medium.ttf) format('truetype');
+  src: url(../assets/fonts/Rubik-Medium.ttf) format("truetype");
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -131,4 +131,8 @@ p {
   line-height: 1.47;
   letter-spacing: normal;
   color: #b0bac9;
+}
+
+html {
+  background-color: rgba(var(--base-color-gray-2));
 }
