--- a/src/app/add-task/add-task.component.css
+++ b/src/app/add-task/add-task.component.css
@@ -1,54 +1,9 @@
-.add-inquiry {
-  width: 50%;
-  margin: 10px 0px 0px 10px;
-  padding: 10px 10px;
+.add-task-body {
+  margin: 7px;
+  padding: 10px 24px;
   border-radius: 5px;
   border: 2px solid rgba(var(--base-color-gray-2, 1));
   background-color: rgb(var(--base-color-white));
-}
-
-@media screen and (max-width: 1000px) {
-  .add-inquiry {
-    width: 90%;
-  }
-}
-
-.header-row > div {
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  margin: 0px 7px;
-  padding: 10px 0px;
-}
-
-.body-row {
-  display: grid;
-  grid-template-columns: 10% 90%;
-  align-items: baseline;
-}
-
-.add-inquiry-button {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: baseline;
-}
-
-.multi-select {
-  position: relative;
-  width: 50%;
-}
-
-.input {
-  width: 100%;
-}
-
-.button {
-  margin-right: 10px;
-}
-
-.multi-select {
-  position: relative;
 }
 
 .header-container {
@@ -57,37 +12,7 @@
   flex: 1;
   justify-content: space-between;
   margin-bottom: 5px;
-}
-
-.add-lecture-body {
-  margin: 7px;
-  padding: 10px 24px;
-  border-radius: 5px;
-  border: 2px solid rgba(var(--base-color-gray-2, 1));
-  background-color: rgb(var(--base-color-white));
-}
-
-.header-row > div {
-  display: flex;
-  align-items: center;
   font-size: 20px;
-  margin: 0px 7px;
-}
-
-.body-row {
-  display: flex;
-  flex: 1;
-  justify-content: flex-start;
-  margin: 0px 7px;
-  align-items: baseline;
-}
-
-.add-inquiry-button {
-  width: 100%;
-  display: flex;
-  margin-bottom: 3px;
-  flex-direction: column;
-  align-items: flex-end;
 }
 
 .exit {
@@ -100,4 +25,18 @@
   margin-left: -44px;
   cursor: pointer;
   padding: 11px 3px;
+}
+
+.body-row {
+  color: rgba(var(--base-color-gray-3));
+  font-weight: lighter;
+  margin: 0px 7px;
+}
+
+.add-task-button {
+  width: 100%;
+  display: flex;
+  margin-bottom: 3px;
+  flex-direction: column;
+  align-items: flex-end;
 }
