--- a/libs/ui/status/status.component.html
+++ b/libs/ui/status/status.component.html
@@ -1,7 +1,5 @@
-<div class="pt-badge" [ngClass]='status.type'>
-    <!-- <h6 class="title">{{status.title}}</h6> -->
-    <h6 class="title">Complete</h6>
-
+<div class="pt-badge" [ngClass]="type">
+    <h6 class="title">{{ status }}</h6>
     <div>
         <ng-content></ng-content>
     </div>
