--- a/libs/ui/hour/hour.component.css
+++ b/libs/ui/hour/hour.component.css
@@ -1,19 +1,19 @@
-.input {
-  width: 100%;
-  border: 0;
-  outline: none;
-  box-shadow: none;
-  background-color: transparent;
+.body-container {
+  display: flex;
+  align-items: baseline;
+  color: rgba(var(--base-color-gray-3));
   font-weight: lighter;
+  justify-content: space-around;
+  margin: 5px 0px 15px 0px;
 }
 
 .input-container {
   outline: 0;
   box-shadow: none;
+  border: 0;
   color: rgba(var(--base-accent-color));
-  display: flex;
+  padding: 10px;
   border-radius: 5px;
   border: 1px solid #e0e7ff;
   background-color: rgba(224, 231, 255, 0.2);
-  margin: 5px 0px 15px 0px;
 }
