--- a/libs/ui/task/task.component.css
+++ b/libs/ui/task/task.component.css
@@ -1,4 +1,4 @@
-.lecture {
+.task {
   padding: 0px 14px;
   margin: 7px 10px;
   border-radius: 5px;
@@ -32,17 +32,10 @@
   display: flex;
   font-size: 18px;
   width: 100%;
+  margin: 0px 10px;
 }
 
-.lecture-status {
-  width: 100%;
-  display: flex;
-  margin: 0px 0px 7px 7px;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.lecture-hours {
+.task-status {
   width: 100%;
   display: flex;
   margin: 0px 0px 7px 7px;
